<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Protein</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home_activity">Easy Protein</string>
    <string name="message_no_history">No History</string>
    <string name="title_entry_dialog">Add Entry</string>


    <string name="test_preference">Test Preference</string>
    <string name="test_preference_summary">This is a test summary</string>

    <string name="edit_text_calorie">Calories</string>
    <string name="edit_text_protein">Protein(g)</string>
    <string name="edit_text_name">Name</string>

    <string name="text_view_calorie">Calories</string>
    <string name="text_view_protein">Protein</string>
    <string name="text_view_multiplier">Multiple:</string>

    <string name="button_add">Add</string>
    <string name="button_reset">Reset</string>
    <string name="button_delete_item">Delete</string>
    <string name="button_close_dialog">Cancel</string>

    <string name="list_footer_text">No Additional History</string>

    <string name="action_reset">Reset</string>
    <string name="action_add_new_item">Add New Item</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_food_entry">CreateFoodEntryActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
