<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    tools:context="com.zygr.easyprotein.app.CreateFoodEntryActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffffff">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_entry_dialog"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:background="@color/color_action_bar_background"/>
    <EditText
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editText_name"
        android:hint="@string/edit_text_name"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:id="@+id/editText_calorie"
            android:hint="@string/edit_text_calorie"
            android:gravity="center"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:id="@+id/editText_protein"
            android:hint="@string/edit_text_protein"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_multiplier"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_multiplier"
            android:inputType="numberDecimal"
            android:ems="2"
            android:text="1"
            />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save_entry"
            android:src="@drawable/ic_action_save"
            style="?android:buttonBarButtonStyle"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_delete_entry"
            android:src="@drawable/ic_action_remove"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarStyle">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_close_dialog"
            android:layout_weight="1"
            android:text="@string/button_close_dialog"
            style="?android:buttonBarButtonStyle"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_save_dialog"
            android:layout_weight="1"
            android:text="@string/button_add"
            style="?android:buttonBarButtonStyle"/>
        </LinearLayout>



</LinearLayout>
